kernel/panel: cancun 1st TM panel enable CABC & HBM
cancun 1st TM panel
1st TM panel enable CABC & HBM

Change-Id: I72a38a527f3304027958ef7387b8a22a2c9d09dc
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2567553
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-display.dtsi
@@ -35,11 +35,11 @@
 		status = "okay";
 
 		//sm5350
-		//pwm-cfg = <0x0F>;
+		pwm-cfg = <0x0F>;
 		hwen-gpio = <&pio 8 1>;
 		boost-ctl = <0x02>;
 		ctl-bank-en = <0x02>;
-		full-scale-current = <0x17>;
+		full-scale-current = <0x19>;
 		map-mode = <1>; /* 0 exponential, 1 linear */
 		sm5350,default-brightness = <1810>;
 		sm5350,init-seq-enable = <1>;
