--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -37,6 +37,7 @@
 # CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD_FHDP is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
+# CONFIG_DRM_PANEL_TIANMA_NT37701A_DPHY_CMD_144HZ is not set
 # CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
 # CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ_RODE is not set
 # CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
