--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -953,6 +953,7 @@ config DRM_PANEL_TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
 	depends on OF
 	depends on DRM_MIPI_DSI
 	depends on BACKLIGHT_CLASS_DEVICE
+        default n
 	help
 	  Say Y here if you want to enable support for TM_NT36672C_650_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
