aion: add camera build dependency
To better manage the projct, move camera macro
definition to project configuration file.

Change-Id: I66ddb54c5a504a5daeacad55771ca9e0eb1ebe4e
Signed-off-by: Xiaofeng Wang <wangxf32@mt.com>
Reviewed-on: https://gerrit.mot.com/2570678
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: <chenlj26@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -93,3 +93,6 @@ CONFIG_MTK_MEMORY_OPTIMIZE=y
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
+
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
