--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
@@ -88,3 +88,7 @@ CONFIG_MTK_EEPROM_PROJECT="manaus"
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
+
+
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
