--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -82,8 +82,11 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-# CONFIG_WT6670F_QC3P is not set
-# CONFIG_MOTO_CHG_WT6670F_SUPPORT is not set
+CONFIG_WT6670F_QC3P=m
+CONFIG_MOTO_CHG_WT6670F_SUPPORT=y
+CONFIG_MOTO_DISCRETE_CHARGE_PUMP_SUPPORT=y
+CONFIG_MOTO_CHARGER_MT6375_SUPPORT=y
+CONFIG_MOTO_CHARGE_PUMP_OVP_CONTROL_SUPPORT=y
 # Add swtp customization
 CONFIG_MOTO_DEVONF_SWTP_CUST=y
 
@@ -126,6 +129,9 @@ CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 
 #enable thermal power on/off algo
 CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
+
+#enable cancunf battery ntc table
+CONFIG_CANCUNF_BATTERY_NTC=y
 
 #disable tui since tui-size = <0 0> in mt6855.dts
 # CONFIG_TRUSTONIC_TRUSTED_UI is not set
