arm/dts: add bootmode for aion
We need get boot mode in charGing only mode
when wireless charGing.

Change-Id: I6d90a7b1de21d47b73f80fadb48ee02763aa693c
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2572396
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Wei Xu <xuwei9@mt.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -353,6 +353,7 @@
         compatible = "cps,wls-charger-cps4038";
         wireless-fw-name = "cps4038.bin";
         enable_stop_epp = <1>;
+        bootmode = <&chosen>;
         reg = <0x38>;
         cps_wls_int = <&pio 31 0x0>;
         cps_det_int = <&pio 115 0x0>;
