Cancun5G:Master branch Fp Bringup
WHY:Fingerprint Bringup
WHAT:modify dts
Change-Id: I2f76e9f41de767649a367d07624cf6f8e2513d95
Reviewed-on: https://gerrit.mot.com/2572506
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: liujian <liujian24@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-cancunf-common-overlay.dtsi
@@ -16,6 +16,7 @@
 #include "mediatek/mt6855_cancunf_camera_overlay.dtsi"
 #include "mediatek/cancunf-sar.dtsi"
 #include "mediatek/cancunf-audio.dtsi"
+#include "mediatek/mt6855-moto-cancunf-fps.dtsi"
 
 #include <dt-bindings/iio/mt635x-auxadc.h>
 #include <dt-bindings/spmi/spmi.h>
@@ -71,86 +72,6 @@
 	status = "okay";
 };
 
-&pio {
-
-	fingerfp_rst_high: fingerfp_rst_high {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-
-	fingerfp_rst_low: fingerfp_rst_low {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-
-	fingerfp_irq_active: fingerfp_irq_active {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO15__FUNC_GPIO15>;
-			slew-rate = <0>;
-			bias-disable;
-		};
-	};
-
-	fingerfp_spi_active: fingerfp_spi_active {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO68__FUNC_SPI1_MI>, <PINMUX_GPIO66__FUNC_SPI1_CSB>, <PINMUX_GPIO67__FUNC_SPI1_MO>, <PINMUX_GPIO65__FUNC_SPI1_CLK>;
-			drive-strength = <2>;
-		};
-	};
-
-	fingerfp_spi_default: fingerfp_spi_default {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO68__FUNC_GPIO68>, <PINMUX_GPIO66__FUNC_GPIO66>, <PINMUX_GPIO67__FUNC_GPIO67>, <PINMUX_GPIO65__FUNC_GPIO65>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	fingerprint_irq: fingerprint_irq {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO15__FUNC_GPIO15>;
-			slew-rate = <0>;
-			bias-disable;
-		};
-	};
-
-	fingerprint_reset_high: fingerprint_reset_high {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-
-	fingerprint_reset_low: fingerprint_reset_low {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	fpsensor_power_high: fpsensor_power_high {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO159__FUNC_GPIO159>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-
-	fpsensor_power_low: fpsensor_power_low {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO159__FUNC_GPIO159>;
-			slew-rate = <1>;
-			output-low;
-		};
-       };
-};
-
 &spi5 {
 	p61: p61@0 {
 		compatible = "nxp,p61";
@@ -193,61 +114,6 @@
 	};
 	svp: SecureVideoPath {
 		compatible = "mediatek,mtk_sec_video_path_support";
-	};
-};
-
-/* FINGERPRINT start */
-&spi1 {
-	status = "okay";
-	mediatek,pad-select = <0>, <1>;
-	tee-only;
-
-	fpc_tee@0 {
-		compatible = "fpc,fpc_spi";
-		reg = <0>;
-		fpc,enable-wakeup;
-		spi-max-frequency = <8000000>;
-		netlink-event = <31>;
-		status = "okay";
-	};
-
-	chipone_tee@1 {
-		status = "okay";
-		compatible = "mediatek,finger-chipone";
-		reg = <1>;
-		spi-max-frequency = <10000000>;
-		netlink-event = <30>;
-	};
-};
-
-&odm {
-	fingerprint_int: fingerprint_int {
-		compatible = "mediatek,fingerprint-fpc";
-		fpc,enable-wakeup;
-		interrupt-parent = <&pio>;
-		interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
-		pinctrl-names = "fingerprint_irq", "fingerprint_reset_high", "fingerprint_reset_low";
-		pinctrl-0 = <&fingerprint_irq>;
-		pinctrl-1 = <&fingerprint_reset_high>;
-		pinctrl-2 = <&fingerprint_reset_low>;
-		fpc,vdd = <&pio 159 0>;
-		fpc,irq = <&pio 15 0>;
-		status = "okay";
-	};
-
-	chipone_int: chipone_int {
-		compatible = "mediatek,chipone-fingerprint";
-chipone,enable-wakeup;
-		interrupt-parent = <&pio>;
-		interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
-		pinctrl-names = "fingerprint_reset_low", "fingerprint_reset_high" , "fingerprint_irq", "fpsensor_power_high", "fpsensor_power_low";
-		pinctrl-0 = <&fingerprint_reset_low>;
-		pinctrl-1 = <&fingerprint_reset_high>;
-		pinctrl-2 = <&fingerprint_irq>;
-		pinctrl-3= <&fpsensor_power_high>;
-		pinctrl-4 = <&fpsensor_power_low>;
-		chipone,irq = <&pio 15 0>;
-		status = "okay";
 	};
 };
 
