arm/dts: modify boot battery voltage to 3.5v
soc=7% then reboot the device fail and see soc=0% picture.
because now battery voltage is lower than 3.6v. For has the BOB project,
the shutdown vol=3.2v but bootup vol=3.6v, the 0.4v voltage gap
has 5-7 power points. which affect user experience.

Change-Id: Iecae08c5d305fa4f14838e9f9a93c6db049ef010
Signed-off-by: liuyc20 <liuyc20@mt.com>
Reviewed-on: https://gerrit.mot.com/2574761
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -36,7 +36,7 @@
 	pre_charge_current = <400>;
 
 	temp_t4_threshold = <60>;
-
+	boot_battery_voltage = <3500000>;
 	/*boot battery voltage when using AC charger*/
 	ac_charger_boot_battery_voltage = <3400000>;
 };
