cancunf: camera porting[1/7]
detail:
camera porting

Change-Id: Iebed8f35d6c9f01921e17a740b3261f9c1d83e52
Signed-off-by: wuhao <am2204@motorola.com>
Reviewed-on: https://gerrit.mot.com/2575383
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: Pengfei Qiao <qiaopf1@motorola.com>
Reviewed-by: Suna Li <lisn17@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -63,7 +63,7 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonf_ov50a_mipi_raw mot_devonf_hi1634q_mipi_raw mot_devonf_s5k4h7_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_cancunf_ov50d_mipi_raw mot_cancunf_hi1634q_mipi_raw mot_cancunf_s5k4h7_mipi_raw mot_cancunf_sc202_mipi_raw"
 CONFIG_MTK_FLASHLIGHT_DEVONF=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
@@ -102,10 +102,9 @@ CONFIG_MTK_CLKBUF_NFC=y
 CONFIG_DISP_ESD_NOTIFY_SUPPORT=y
 
 
-#Moto devonf Camera
-# CONFIG_MOT_DEVONN_CAMERA_PROJECT is not set
-CONFIG_MOT_DEVONF_CAMERA_PROJECT=y
-
+#Moto cancunf Camera
+# CONFIG_MOT_CANCUNF_CAMERA_PROJECT is not set
+CONFIG_MOT_CANCUNF_CAMERA_PROJECT=y
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
 
