--- a/arch/arm64/boot/dts/mediatek/mt6855_cancunf_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855_cancunf_camera_overlay.dtsi
@@ -4,14 +4,14 @@
 &pio {
 	camera_pins_cam0_rst_0: cam0@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
+			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam0_rst_1: cam0@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
+			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -32,14 +32,14 @@
 	};
 	camera_pins_cam2_rst_0: cam2@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam2_rst_1: cam2@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -82,20 +82,6 @@
 	camera_pins_cam0_vcamio_1: cam0@vcam5 {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO11__FUNC_GPIO11>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-	camera_pins_cam0_vcamaf_0: cam0@vcam6 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO4__FUNC_GPIO4>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	camera_pins_cam0_vcamaf_1: cam0@vcam7 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO4__FUNC_GPIO4>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -290,43 +276,6 @@
 	};
 	camera_pins_default: camdefault {
 	};
-	flashlight_gpio_high: flashlight@0 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO21__FUNC_GPIO21>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-	flashlight_gpio_low: flashlight@1 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO21__FUNC_GPIO21>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	flashlight_pwm_high: flashlight@2 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO24__FUNC_GPIO24>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-	flashlight_pwm_low: flashlight@3 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO24__FUNC_GPIO24>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	flashlight_pwm_en: flashlight@4 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO24__FUNC_PWM_1>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-	flash_default: flashlightdefault {
-	};
 };
 &kd_camera_hw1 {
 	pinctrl-names = "default",
@@ -336,7 +285,6 @@
 			"cam0_ldo_vcamd_0", "cam0_ldo_vcamd_1",
 			"cam0_ldo_vcama_0", "cam0_ldo_vcama_1",
 			"cam0_ldo_vcamio_0", "cam0_ldo_vcamio_1",
-			"cam0_ldo_vcamaf_0", "cam0_ldo_vcamaf_1",
 			"cam1_ldo_vcamd_0", "cam1_ldo_vcamd_1",
 			"cam1_ldo_vcama_0", "cam1_ldo_vcama_1",
 			"cam1_ldo_vcamio_0", "cam1_ldo_vcamio_1",
@@ -366,44 +314,45 @@
 	pinctrl-10 = <&camera_pins_cam0_vcama_1>;
 	pinctrl-11 = <&camera_pins_cam0_vcamio_0>;
 	pinctrl-12 = <&camera_pins_cam0_vcamio_1>;
-	pinctrl-13 = <&camera_pins_cam0_vcamaf_0>;
-	pinctrl-14 = <&camera_pins_cam0_vcamaf_1>;
-	pinctrl-15 = <&camera_pins_cam1_vcamd_0>;
-	pinctrl-16 = <&camera_pins_cam1_vcamd_1>;
-	pinctrl-17 = <&camera_pins_cam1_vcama_0>;
-	pinctrl-18 = <&camera_pins_cam1_vcama_1>;
-	pinctrl-19 = <&camera_pins_cam1_vcamio_0>;
-	pinctrl-20 = <&camera_pins_cam1_vcamio_1>;
-	pinctrl-21 = <&camera_pins_cam2_vcamd_0>;
-	pinctrl-22 = <&camera_pins_cam2_vcamd_1>;
-	pinctrl-23 = <&camera_pins_cam2_vcama_0>;
-	pinctrl-24 = <&camera_pins_cam2_vcama_1>;
-	pinctrl-25 = <&camera_pins_cam2_vcamio_0>;
-	pinctrl-26 = <&camera_pins_cam2_vcamio_1>;
-	pinctrl-27 = <&camera_pins_cam2_vcamaf_0>;
-	pinctrl-28 = <&camera_pins_cam2_vcamaf_1>;
-	pinctrl-29 = <&camera_pins_cam0_mclk_off>;
-	pinctrl-30 = <&camera_pins_cam0_mclk_2ma>;
-	pinctrl-31 = <&camera_pins_cam0_mclk_4ma>;
-	pinctrl-32 = <&camera_pins_cam0_mclk_6ma>;
-	pinctrl-33 = <&camera_pins_cam0_mclk_8ma>;
-	pinctrl-34 = <&camera_pins_cam1_mclk_off>;
-	pinctrl-35 = <&camera_pins_cam1_mclk_2ma>;
-	pinctrl-36 = <&camera_pins_cam1_mclk_4ma>;
-	pinctrl-37 = <&camera_pins_cam1_mclk_6ma>;
-	pinctrl-38 = <&camera_pins_cam1_mclk_8ma>;
-	pinctrl-39 = <&camera_pins_cam2_mclk_off>;
-	pinctrl-40 = <&camera_pins_cam2_mclk_2ma>;
-	pinctrl-41 = <&camera_pins_cam2_mclk_4ma>;
-	pinctrl-42 = <&camera_pins_cam2_mclk_6ma>;
-	pinctrl-43 = <&camera_pins_cam2_mclk_8ma>;
+	pinctrl-13 = <&camera_pins_cam1_vcamd_0>;
+	pinctrl-14 = <&camera_pins_cam1_vcamd_1>;
+	pinctrl-15 = <&camera_pins_cam1_vcama_0>;
+	pinctrl-16 = <&camera_pins_cam1_vcama_1>;
+	pinctrl-17 = <&camera_pins_cam1_vcamio_0>;
+	pinctrl-18 = <&camera_pins_cam1_vcamio_1>;
+	pinctrl-19 = <&camera_pins_cam2_vcamd_0>;
+	pinctrl-20 = <&camera_pins_cam2_vcamd_1>;
+	pinctrl-21 = <&camera_pins_cam2_vcama_0>;
+	pinctrl-22 = <&camera_pins_cam2_vcama_1>;
+	pinctrl-23 = <&camera_pins_cam2_vcamio_0>;
+	pinctrl-24 = <&camera_pins_cam2_vcamio_1>;
+	pinctrl-25 = <&camera_pins_cam2_vcamaf_0>;
+	pinctrl-26 = <&camera_pins_cam2_vcamaf_1>;
+	pinctrl-27 = <&camera_pins_cam0_mclk_off>;
+	pinctrl-28 = <&camera_pins_cam0_mclk_2ma>;
+	pinctrl-29 = <&camera_pins_cam0_mclk_4ma>;
+	pinctrl-30 = <&camera_pins_cam0_mclk_6ma>;
+	pinctrl-31 = <&camera_pins_cam0_mclk_8ma>;
+	pinctrl-32 = <&camera_pins_cam1_mclk_off>;
+	pinctrl-33 = <&camera_pins_cam1_mclk_2ma>;
+	pinctrl-34 = <&camera_pins_cam1_mclk_4ma>;
+	pinctrl-35 = <&camera_pins_cam1_mclk_6ma>;
+	pinctrl-36 = <&camera_pins_cam1_mclk_8ma>;
+	pinctrl-37 = <&camera_pins_cam2_mclk_off>;
+	pinctrl-38 = <&camera_pins_cam2_mclk_2ma>;
+	pinctrl-39 = <&camera_pins_cam2_mclk_4ma>;
+	pinctrl-40 = <&camera_pins_cam2_mclk_6ma>;
+	pinctrl-41 = <&camera_pins_cam2_mclk_8ma>;
+
+	cam0_vcamaf-supply = <&mt6369_vtp>;
+
 
 	cam0_pin_mclk = "mclk";
 	cam0_pin_rst = "gpio";
 	cam0_pin_vcama = "gpio";
 	cam0_pin_vcamd = "gpio";
 	cam0_pin_vcamio = "gpio";
-	cam0_pin_vcamaf = "gpio";
+	cam0_pin_vcamaf = "regulator";
 	cam1_pin_mclk = "mclk";
 	cam1_pin_rst = "gpio";
 	cam1_pin_vcama = "gpio";
@@ -416,43 +365,33 @@
 	cam2_pin_vcamio = "gpio";
 	cam2_pin_vcamaf = "gpio";
 
+	cam0_enable_sensor = "mot_cancunf_ov50d_mipi_raw";
+	cam1_enable_sensor = "mot_cancunf_hi1634q_mipi_raw";
+	cam2_enable_sensor = "mot_cancunf_s5k4h7_mipi_raw mot_cancunf_sc202_mipi_raw";
+
 	status = "okay";
 };
 /* CAMERA GPIO end */
 
+
 /* CAMERA EEPROM */
 &i2c2 {
 	status = "okay";
-	clock-frequency = <1000000>;
+	clock-frequency = <400000>;
 	#address-cells = <1>;
-	size-cells = <0>;
-	mtk_camera_eeprom0:camera_eeprom0@50 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x50>;
-		status = "okay";
-	};
+	#size-cells = <0>;
 	camera_main_mtk:camera_main@1a {
 		compatible = "mediatek,camera_main";
 		#thermal-sensor-cells = <0>;
 		reg = <0x1a>;
 		status = "okay";
 	};
-	camera_main_af_devonf:camera_main_af@18 {
-		compatible = "mediatek,camera_main_af";
-		reg = <0x18>;
-		status = "okay";
-	};
 };
 &i2c4 {
 	status = "okay";
-	clock-frequency = <1000000>;
+	clock-frequency = <400000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	mtk_camera_eeprom1:camera_eeprom1@51 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x51>;
-		status = "okay";
-	};
 	camera_sub_mtk:camera_sub@1a {
 		compatible = "mediatek,camera_sub";
 		#thermal-sensor-cells = <0>;
@@ -460,79 +399,34 @@
 		status = "okay";
 	};
 };
-&i2c7 {
-	status = "okay";
-	clock-frequency = <400000>;
-	#address-cells = <1>;
-	#size-cells = <0>;
-};
 &i2c8 {
 	status = "okay";
 	clock-frequency = <400000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	mtk_camera_eeprom2:camera_eeprom2@50 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x50>;
-		status = "okay";
-	};
 	camera_main_two_mtk:camera_main_two@10 {
 		compatible = "mediatek,camera_main_two";
 		#thermal-sensor-cells = <0>;
 		reg = <0x10>;
 		status = "okay";
 	};
-	camera_main_two_af_devonf:camera_main_two_af@18 {
-		compatible = "mediatek,camera_main_two_af";
-		reg = <0x18>;
-		status = "okay";
-	};
 };
 /* CAMERA EEPROM end */
 
-/* CAMERA TZ config */
-&thermal_zones {
-	camera_main: camera_main {
-		polling-delay = <1000>; /* milliseconds */
-		polling-delay-passive = <0>; /* milliseconds */
-		thermal-sensors = <&camera_main_mtk>;
+/* CAMERA AF */
+&i2c2 {
+	camera_main_af_mtk:camera_main_af@72 {
+		compatible = "mediatek,camera_main_af";
+		reg = <0x72>;
+		status = "okay";
 	};
-	camera_sub: camera_sub {
-		polling-delay = <1000>; /* milliseconds */
-		polling-delay-passive = <0>; /* milliseconds */
-		thermal-sensors = <&camera_sub_mtk>;
-	};
-	camera_main_two: camera_main_two {
-		polling-delay = <1000>; /* milliseconds */
-		polling-delay-passive = <0>; /* milliseconds */
-		thermal-sensors = <&camera_main_two_mtk>;
+
+};
+&i2c8 {
+	camera_main_two_af_mtk:camera_main_two_af@0c {
+		compatible = "mediatek,camera_main_two_af";
+		reg = <0x0c>;
+		status = "okay";
 	};
 };
-/* CAMERA TZ config end */
-
-/* CAMERA Flashlight */
-&flashlights_devonf {
-	compatible = "mediatek,flashlights_devonf_pwm";
-	pinctrl-names = "default",
-		"flashlight_gpio_high",
-		"flashlight_gpio_low",
-		"flashlight_pwm_high",
-		"flashlight_pwm_low",
-		"flashlight_pwm_en";
-
-	pinctrl-0 = <&flash_default>;
-	pinctrl-1 = <&flashlight_gpio_high>;
-	pinctrl-2 = <&flashlight_gpio_low>;
-	pinctrl-3 = <&flashlight_pwm_high>;
-	pinctrl-4 = <&flashlight_pwm_low>;
-	pinctrl-5 = <&flashlight_pwm_en>;
-
-	srcclk = <&pericfg_ao_clk>;
-	decouple = <1>;
-	channel@1 {
-		type = <0>;
-		ct = <0>;
-		part = <0>;
-	};
-};
-/* CAMERA Flashlight end */
+/* CAMERA AF end */
