--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-cancunf.config
@@ -20,15 +20,14 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_devonn_s5kjn1_mipi_raw mot_devonn_hi1634q_mipi_raw mot_devonn_ov02b10_mipi_raw mot_devonn_gc02m1_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_cancunf_ov50d_mipi_raw mot_cancunf_hi1634q_mipi_raw mot_cancunf_s5k4h7_mipi_raw mot_cancunf_sc202_mipi_raw"
 CONFIG_HQ_CAMERA_LDO=m
-
 
 CONFIG_MTK_CLKBUF_NFC=y
 
 
-#Moto devonn Camera
-CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
+#Moto cancunf Camera
+CONFIG_MOT_CANCUNF_CAMERA_PROJECT=y
 
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
