--- a/drivers/misc/mediatek/imgsensor/src/Kconfig
+++ b/drivers/misc/mediatek/imgsensor/src/Kconfig
@@ -61,3 +61,8 @@ config  MOT_DEVONF_CAMERA_PROJECT
 	tristate "set devonf camera driver"
 	help
 	  Used to distinguish project-driver code from other projects.
+
+config  MOT_CANCUNF_CAMERA_PROJECT
+        tristate "set cancun camera driver"
+        help
+          Used to distinguish project-driver code from other projects.
