cancunf: flashlight porting[1/2]
detail:
fliahtlight porting

Change-Id: Id80f39bd3fedb34b4624793771317c0d60c66f77
Signed-off-by: wuhao <am2204@motorola.com>
Reviewed-on: https://gerrit.mot.com/2576801
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Suna Li <lisn17@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-moto-base.dtsi
@@ -17,6 +17,7 @@
 	charge_leds: charge_leds{ };
 	moto_chg_tcmd: moto_chg_tcmd { };
 	flashlights_devonf: flashlights_devonf { };
+        flashlights_cancunf: flashlights_cancunf { };
 };
 
 &mt6375_typec {
