--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-cancunf.config
@@ -22,6 +22,7 @@ CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_cancunf_ov50d_mipi_raw mot_cancunf_hi1634q_mipi_raw mot_cancunf_s5k4h7_mipi_raw mot_cancunf_sc202_mipi_raw"
 CONFIG_HQ_CAMERA_LDO=m
+CONFIG_MTK_FLASHLIGHT_CANCUNF=m
 
 CONFIG_MTK_CLKBUF_NFC=y
 
