--- a/arch/arm64/boot/dts/mediatek/mt6855_cancunf_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855_cancunf_camera_overlay.dtsi
@@ -432,9 +432,14 @@
 /* CAMERA EEPROM */
 &i2c2 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
-	#size-cells = <0>;
+	size-cells = <0>;
+	mtk_camera_eeprom0:camera_eeprom0@50 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x50>;
+		status = "okay";
+	};
 	camera_main_mtk:camera_main@1a {
 		compatible = "mediatek,camera_main";
 		#thermal-sensor-cells = <0>;
@@ -444,9 +449,14 @@
 };
 &i2c4 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
+	mtk_camera_eeprom1:camera_eeprom1@51 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x51>;
+		status = "okay";
+	};
 	camera_sub_mtk:camera_sub@1a {
 		compatible = "mediatek,camera_sub";
 		#thermal-sensor-cells = <0>;
@@ -459,6 +469,11 @@
 	clock-frequency = <400000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
+	mtk_camera_eeprom2:camera_eeprom2@50 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x50>;
+		status = "okay";
+	};
 	camera_main_two_mtk:camera_main_two@10 {
 		compatible = "mediatek,camera_main_two";
 		#thermal-sensor-cells = <0>;
