--- a/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_cancunf_sc202_mipi_raw/Makefile
+++ b/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_cancunf_sc202_mipi_raw/Makefile
@@ -1,4 +1,4 @@
 imgsensor_isp6s-objs += \
         $(subdrv-rpath)/mot_cancunf_sc202mipiraw_Sensor.o
-#imgsensor_isp6s-objs += \
-#	$(subdrv-rpath)/eeprom_i2c_sc202_driver.o
+imgsensor_isp6s-objs += \
+	$(subdrv-rpath)/eeprom_i2c_sc202_driver.o
