arm/dts: enable wls offset detect for aion
In BPP wireless charGing,when wls offseted,the wireless charGing current
is small.It's poor experience.
So enable wls offset detect for aion.
When battery soc > 90 ,we will stop rx offset detect.

Change-Id: I6645368f51ee6320c96d6c2c7eb0b8f9ac87f673
Signed-off-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-on: https://gerrit.mot.com/2577101
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Haijian Ma <mahj8@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -353,6 +353,9 @@
         compatible = "cps,wls-charger-cps4038";
         wireless-fw-name = "cps4038.bin";
         enable_stop_epp = <1>;
+        enable_rx_offset_detect = <1>;
+        /*stop rx offset detect battery soc*/
+        rod_stop_battery_soc = <90>;
         bootmode = <&chosen>;
         reg = <0x38>;
         cps_wls_int = <&pio 31 0x0>;
