tesla: add camera build dependency
Some kernel configurations were wrongly added to:
  - arch/arm64/configs/mgk_64_k510_defconfig
The gerrit https://gerrit.mot.com/#/c/2576791/ removes the set of configurations
that were wrongly added, but a part of them needs to be added to the device
specific configuration file, otherwise build failures are observed as below.

+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
ERROR: modpost: "camera_ldo_set_en_ldo" [drivers/misc/mediatek/
        imgsensor/src/isp6s/imgsensor_isp6s.ko] undefined!
ERROR: modpost: "camera_ldo_set_ldo_value" [drivers/misc/mediatek/
        imgsensor/src/isp6s/imgsensor_isp6s.ko] undefined!
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

Change-Id: Ia40adbcf19b30b2dcc6bd7d7cbf400bbb92fd54b
Reviewed-on: https://gerrit.mot.com/2579670
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Marcelo Pincinato <mpcinato@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -78,3 +78,8 @@ CONFIG_SCSI_SKHID=y
 #Moto Tesla Camera eeprom
 CONFIG_MTK_EEPROM_PROJECT="tesla"
 CONFIG_MTK_MEMORY_OPTIMIZE=y
+
+# camera build dependecies
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
+
