arm64/dts: mediatek/mt6363.dtsi add the time of long press reset
according to the datasheet and config as below, we can add the time
of hardware reset by long press power-key

KPD_PMIC_LPRST_TD :=
   0      : 8 sec
   1      : 11 sec
   2      : 2 sec
   3      : 5 sec

Change-Id: Ib5071ea4c0e75a41c999a6dc97ccca6178d765f1
Signed-off-by: Franz Wang <wangxf14@motorola.com>
Reviewed-on: https://gerrit.mot.com/2582230
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -683,3 +683,13 @@
 		};
 	};
 };
+
+/* long powerkey reset setting */
+
+&spmi {
+	main_pmic: pmic@4 {
+		mt6363keys: mt6363keys {
+			power-off-time-sec = <1>;
+		};
+	};
+};
