5G]sku4 support typec otp
sku4 support typecotp function,and
hz,short,cc program test is ok

Change-Id: I40dac47987dfe9b07c53031ae8cc1437d4051b4e
Reviewed-on: https://gerrit.mot.com/2585654
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: liujian <liujian24@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Tested-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-cancunf.config
@@ -126,6 +126,8 @@ CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
 #enable cancunf battery ntc table
 CONFIG_CANCUNF_BATTERY_NTC=y
 
+CONFIG_MOTO_JP_TYPECOTP_SUPPORT=y
+
 #disable tui since tui-size = <0 0> in mt6855.dts
 # CONFIG_TRUSTONIC_TRUSTED_UI is not set
 #disable prot since prot-region-base-size = <0 0> in mt6855.dts
