--- a/arch/arm64/boot/dts/mediatek/carrier-channel-ids.dtsi
+++ b/arch/arm64/boot/dts/mediatek/carrier-channel-ids.dtsi
@@ -230,7 +230,7 @@
 				"retsea",	/* 210 */
 				"retjp",	/* 211 */
 				"softbank",	/* 212 */
-				"undefined",	/* 213 */
+				"optus",	/* 213 */
 				"retkr",	/* 214 */
 				"retjio",	/* 215 */
 				"undefined",	/* 216 */
