[charge][Cancun 5G]modify cancunf charge parameter
WHY:modify charge function patameter according to project;
WHAT:1. modify otg boost curr limit 1.1A; 2. modify 30W charge parameter

Change-Id: I2d32eb9bda66e92b2842637db43939fb25e6e16f
Reviewed-on: https://gerrit.mot.com/2586431
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: liujian <liujian24@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>

--- a/arch/arm64/boot/dts/mediatek/cancunf-charger-india-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-charger-india-overlay.dtsi
@@ -55,15 +55,16 @@
 	mmi,mmi-temp-zones = <0 4200 1200 0>,
 			<10 4250 3000 1800>,
 			<15 4500 3000 3000>,
-			<35 4500 6000 4000>,
-			<45 4500 6000 4000>,
+			<45 4300 6000 5200>,
+			<45 4400 5200 4000>,
+			<45 4500 4000 4000>,
 			<60 4200 5840 0>;
 	mmi,mmi-ffc-zones = <0 4200 292>,
 			<10 4500 292>,
 			<15 4500 292>,
-			<25 4530 524>,
-			<35 4530 560>,
-			<45 4530 599>,
+			<25 4530 776>,
+			<35 4530 946>,
+			<45 4530 1379>,
 			<60 4200 292>;
 	mmi,enable-charging-limit;
 	mmi,upper-limit-capacity = <70>;
@@ -89,16 +90,16 @@
 				<0 4200 1200  0 0 0 0>,
 				<10 4250 3000 4500 1800 0 0>,
 				<15 4500 3000 0 0 0 0>,
-				<45 4300 6000 4400 5200 4500 4000>,
+				<45 4300 6000 4400 5200 4530 4000>,
 				<60 4200 5840 0 0 0 0>;
 
-		mmi,mmi-ffc-zones = <4200 243>,
-				<4250 243>,
-				<4450 243>,
-				<4530 575>,
-				<4530 635>,
-				<4530 661>,
-				<4200 243>;
+		mmi,mmi-ffc-zones = <4200 292>,
+				<4250 292>,
+				<4450 292>,
+				<4530 776>,
+				<4530 946>,
+				<4530 1379>,
+				<4200 292>;
 
 		mmi,thermal-min-level = <1500000>;
 
@@ -112,18 +113,21 @@
 		charger_device_1 {
 			chrg-name = "cp-master";
 			psy-name = "cp-standalone";
-			charging-curr-min = <1500000>;
+			charging-curr-min = <1800000>;
 		};
 	};
 };
 
-/*
+
 &mt6375_chg {
 	cv = <4500>;
-	ircmp_r = <16700>;
-	ircmp_v = <32>;
+	ircmp_r = <0>;
+	ircmp_v = <0>;
 };
-*/
+
+&extcon_usb {
+	vbus-current = <1100000>;
+};
 
 &pdc {
 	sc_input_current = <3000000>;
@@ -171,7 +175,7 @@
 		gauge = <&mtk_gauge>;
 		polling_interval = <10000>;
 		ta_cv_ss_repeat_tmin = <25>;
-		vbat_cv = <4510>;
+		vbat_cv = <4530>;
 		start_soc_min = <0>;
 		start_soc_max = <80>;
 		start_vbat_max = <4450>;
@@ -403,6 +407,7 @@
 	bootmode = <&chosen>;
 	mmi,thermal-mitigation = <(-1) 5200000 4700000 4000000 3500000
 				3000000 1000000 500000 300000>;
+	mmi,thermal-charger-pump-support;
 };
 
 
