--- a/arch/arm64/boot/dts/mediatek/cancunf-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cancunf-charger.dtsi
@@ -69,13 +69,11 @@
 	mmi,min-cp-therm-current-ua = <1600000>;
 };
 
-/*
 &mt6375_chg {
 	cv = <4500>;
-	ircmp_r = <16700>;
-	ircmp_v = <32>;
+	ircmp_r = <0>;
+	ircmp_v = <0>;
 };
-*/
 
 &pdc {
 	sc_input_current = <3000000>;
@@ -94,6 +92,10 @@
 		pd,sink-pdo-size = <2>;
                 pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
 	};
+};
+
+&extcon_usb {
+	vbus-current = <1100000>;
 };
 
 /*
