--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-manaus.config
@@ -85,6 +85,8 @@ CONFIG_MOTO_PE50_CV_LOWER_BOUND_GAP_OFF=y
 #Moto Manaus Camera eeprom
 CONFIG_MTK_EEPROM_PROJECT="manaus"
 
+CONFIG_MTK_MEMORY_OPTIMIZE=y
+
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
